Change my code from garbage, to less garbage
My code before is so messy and confusing, so I refactore it and it became less messy and confusing

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,11 @@
   justify-content: center;
   align-items: center;
 }
+
+.title-and-board-cont{
+  display: flex;
+  flex-direction: column;
+}
 .container-square{
   max-width: 200px;
   display: flex;
@@ -63,3 +68,8 @@
   display: flex;
 }
 
+.history-cont{
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
