--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,12 @@
   color: #888;
 } */
 
+:root{
+  --bg-clr: rgb(88,75,255);
+  --secondary-clr:#213547;
+  --secondary-clr-history-items:#f7f7f7;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -122,4 +128,45 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5d59fa",endCo
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  background-color: #fff;
+  border-radius:10px;
+  /* overflow: hidden; */
+  height: 300px;
+  width: 310px;
+
+}
+
+.history-cont__heading{
+  padding: 1rem;
+  width: 100%;
+  background-color: #ececec;
+  color: var(--secondary-clr);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.history-cont__items {
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow-y: auto;
+}
+
+.history-cont__items::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Handle */
+.history-cont__items::-webkit-scrollbar-thumb {
+  background: #e1e0e0;
+  border-radius: 4px;
+}
+
+.history-cont__items__btn{
+    background-color: var(--bg-clr);
+    color: #fff;
 }
